# typua

./: .gitignore  .typua.toml  AGENTS.md  Cargo.toml  DESIGN.md  DESIGN_FEATURES.md  DESIGN_TYPESYSTEM.md  DESIGN_TYPESYSTEM_JA.md  LICENSE  README.md  TODO.md  rustfmt.toml  typua.sample.toml
.todo/: TODO.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: db.rs  files.rs  lib.rs  paser.rs
crates/binder/: Cargo.toml
crates/binder/src/: binder.rs  flowgraph.rs  lib.rs  typeenv.rs
crates/checker/: Cargo.toml
crates/checker/src/: checker.rs  lib.rs  result.rs
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  lsp.rs  main.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs  output.rs  version.rs
crates/core/: Cargo.toml
crates/lsp/: Cargo.toml
crates/lsp/src/: backend.rs  handler.rs  lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: annotation.rs  ast.rs  diagnostic.rs  error.rs  lib.rs  parser.rs  span.rs  types.rs
crates/span/: Cargo.toml
crates/span/src/: lib.rs  span.rs
crates/ty/: Cargo.toml
crates/ty/src/: diagnostic.rs  error.rs  kind.rs  lib.rs  typeinfo.rs
crates/typecheck/: Cargo.toml
crates/vfs/: Cargo.toml
crates/workspace/: Cargo.toml
crates/workspace/src/: file.rs  lib.rs  workspace.rs
docs/: ANNOTATIONS.md  ARCHITECTURE.md  BENCHES.md  DESIGN.md  TYPESYSTEM.md  ci.md  generics.md
src/: checker.rs  config.rs  diagnostics.rs  error.rs  lib.rs  lsp.rs  main.rs  parser.rs  typecheck.rs  workspace.rs
src/cli/: mod.rs
src/typechecker/: annotation.rs  checker.rs  mod.rs  typed_ast.rs  types.rs
src/typing/: constraints.rs  mod.rs  types.rs  unify.rs
src/typing/infer/: env.rs  expr.rs  mod.rs
tests/: 2  ;  typechecker.rs  typing_m1.rs
tests/scripts/: array.lua  assign-type-mismatch.lua  binop.lua  class.lua  control_flow.lua  function.lua  generics.lua  library.lua  missing-parameter.lua  multi-return-extra.lua  multi-return-missing.lua  multi-return-ok.lua  multi-return-type-mismatch.lua  multi-return-workspace-lib.lua  narrowing.lua  recursive_type.lua  sample.lua
