[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/takeshid/typua"
authors = ["tkcd<goriponikeike55@gmail.com>"]
license = "MIT"
version = "0.1.3"

[workspace.dependencies]
# internal dependencies
typua-core = { path = "crates/core" }
typua-config = { path = "crates/config" }
typua-vfs = { path = "crates/vfs" }
typua-parser = { path = "crates/parser" }

# external dependencies
anyhow = "1"
