[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.90"
repository = "https://github.com/takeshid/typua"
authors = ["tkcd<goriponikeike55@gmail.com>"]
license = "MIT"
version = "0.1.3"

[workspace.dependencies]
# internal dependencies
typua-ty = { path = "crates/ty" }
typua-span = { path = "crates/span" }
typua-parser = { path = "crates/parser" }
typua-binder = { path = "crates/binder" }
typua-checker = { path = "crates/checker" }
typua-config = { path = "crates/config" }
typua-vfs = { path = "crates/vfs" }
typua-lsp = { path = "crates/lsp" }
typua-analyzer = { path = "crates/analyzer" }

# external dependencies
## for release
anyhow = "1"
thiserror = "2"
full_moon = { version = "2", features = ["luajit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.6"
tower-lsp = "0.20"
serde = "1.0"
itertools = "0.14"
indexmap = "2.12"

## for development
unindent = "0.2"
pretty_assertions = "1.4"
