[package]
name = "typua-analyzer"
edition = "2024"
version = "0.1.0"

[lib]
name = "typua_analyzer"
path = "src/lib.rs"

[dependencies]
typua-checker.workspace = true
typua-binder.workspace = true
typua-parser.workspace = true
typua-config.workspace = true
typua-ty.workspace = true
typua-lsp.workspace = true
anyhow.workspace = true
salsa.workspace = true
dashmap.workspace = true
