[package]
name = "typua-cli"
edition = "2024"
version.workspace = true

[[bin]]
name = "typua"
path = "src/main.rs"

[dependencies]
# internal
typua-lsp.workspace = true
typua-analyzer.workspace = true
typua-config.workspace = true

# external
tokio.workspace = true
tokio-macros.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
xdg = "3.0"
