[package]
name = "typua-lsp"
version = "0.1.0"
edition = "2024"

[lib]
name = "typua_lsp"
path = "src/lib.rs"

[dependencies]
# internal
typua-span.workspace = true
typua-ty.workspace = true
typua-analyzer.workspace = true
typua-config.workspace = true

# external
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
tower-lsp.workspace = true
