[package]
name = "typua-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "typua_parser"
path = "src/lib.rs"

[dependencies]
full_moon = "2.0.0"
anyhow = { workspace = true }
thiserror = { workspace = true }
typua-config = { workspace = true }
im = { workspace = true }
nom = "8.0.0"
nom_locate = "5.0.0"

[dev-dependencies]
unindent = { workspace = true }
pretty_assertions = { workspace = true }
