[package]
name = "typua-parser"
version = "0.1.0"
edition = "2024"

[lib]
name = "typua_parser"
path = "src/lib.rs"

[dependencies]
# internal crates
typua-config.workspace = true
typua-ty.workspace = true
typua-span.workspace = true

# external crates
## use only in parser
# full_moon = "2.0.0"
nom = "8.0.0"
nom_locate = "5.0.0"
## use in workspace
anyhow.workspace = true
thiserror.workspace = true
full_moon.workspace = true

[dev-dependencies]
unindent = { workspace = true }
pretty_assertions = { workspace = true }
